swagger complete for user
